--- a/src/main/resources/org/proview/test/AdminDashboardView.fxml
+++ b/src/main/resources/org/proview/test/AdminDashboardView.fxml
@@ -17,7 +17,7 @@
         <fx:include source="NavBarView.fxml" />
     </top>
     <center>
-      <ScrollPane BorderPane.alignment="CENTER">
+      <ScrollPane prefHeight="645.0" prefWidth="1305.0" BorderPane.alignment="CENTER">
          <content>
             <VBox alignment="TOP_CENTER" prefHeight="743.0" prefWidth="1282.0" spacing="10.0">
                <children>
@@ -26,14 +26,14 @@
                         <Font size="26.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER" prefHeight="150.0" prefWidth="1341.0">
+                  <HBox alignment="CENTER" prefHeight="201.0" prefWidth="1282.0">
                      <children>
                         <LineChart fx:id="issuesCreatedNumberLineChart" legendVisible="false" title="Number of Issues Created">
                           <xAxis>
                             <CategoryAxis label="Date" side="BOTTOM" />
                           </xAxis>
                           <yAxis>
-                            <NumberAxis autoRanging="false" forceZeroInRange="false" label="Issues" pickOnBounds="false" side="LEFT" tickLabelGap="1.0" upperBound="10.0" />
+                            <NumberAxis forceZeroInRange="false" label="Issues" pickOnBounds="false" side="LEFT" tickLabelGap="1.0" upperBound="10.0" />
                           </yAxis>
                         </LineChart>
                         <PieChart fx:id="issueStatusPieChart" title="Percentage of Each Issue Current Status" />
@@ -44,14 +44,14 @@
                         <Font size="26.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER">
+                  <HBox alignment="CENTER" prefHeight="201.0" prefWidth="1282.0">
                      <children>
                         <BarChart fx:id="avgRatingBookCountBarChart" legendVisible="false" title="Number of Books in Each Range Of Average Rating">
                           <xAxis>
                             <CategoryAxis label="Rating" side="BOTTOM" />
                           </xAxis>
                           <yAxis>
-                            <NumberAxis autoRanging="false" label="Books" side="LEFT" />
+                            <NumberAxis label="Books" side="LEFT" />
                           </yAxis>
                         </BarChart>
                         <PieChart fx:id="copiesBorrowedPieChart" title="Percentage of copies being borrowed" />
@@ -62,14 +62,14 @@
                         <Font size="26.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
+                  <HBox alignment="CENTER" prefHeight="201.0" prefWidth="1297.0" spacing="20.0">
                      <children>
                         <LineChart fx:id="newRegistrationLineChart" prefHeight="150.0" prefWidth="985.0" title="Number of New Registration Per Day So Far">
                           <xAxis>
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
                           <yAxis>
-                            <NumberAxis autoRanging="false" side="LEFT" />
+                            <NumberAxis label="Registration" side="LEFT" />
                           </yAxis>
                         </LineChart>
                      </children>
