--- a/src/main/resources/org/proview/test/HomeView.fxml
+++ b/src/main/resources/org/proview/test/HomeView.fxml
@@ -13,7 +13,7 @@
       <fx:include source="NavBarView.fxml" />
    </top>
    <left>
-      <ScrollPane hbarPolicy="NEVER" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
+      <ScrollPane hbarPolicy="NEVER" prefWidth="320.0" vbarPolicy="NEVER" BorderPane.alignment="CENTER">
          <content>
             <VBox spacing="10.0">
                <children>
