--- a/src/main/resources/org/proview/test/styles/SearchResultView.css
+++ b/src/main/resources/org/proview/test/styles/SearchResultView.css
@@ -50,6 +50,7 @@
 .apply-button:hover {
     -fx-background-color: -dark-blue;
     -fx-text-fill: #ffffff;
+    -fx-cursor: hand;
 }
 
 .range-slider {
